--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -122,12 +122,13 @@
 
 						<!-- 방문자 수 -->
 						<div id="visitCountArea" class="hidden">
-							<div class="totalVisit">
-								누적 방문자: <span th:text="${post.post}"></span>명
-							</div>
 							<!-- 오늘 방문자 수 -->
 							<div class="todayVisit">
 								오늘 방문자: <span th:text="${post.dailyPost}"></span>명
+							</div>
+							<!-- 누적 방문자 수 -->
+							<div class="totalVisit">
+								누적 방문자: <span th:text="${post.post}"></span>명
 							</div>
 						</div>
 					</div>
