--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -100,7 +100,7 @@
 							<button class="menu">지진</button>
 						</div>
 						<!-- <div class="eqYearArea">
-							<select name="year" id="eqYearMenu">
+							<select name="year" id="eqYearMenu" class="eqYearMenu">
 								<option value="2023">2023년</option>
 								<option value="2021">2022년</option>
 								<option value="2022">2021년</option>
