--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,10 +1,6 @@
 <link rel="stylesheet" href="../CSS/index.css" />
 <link rel="stylesheet" href="../CSS/common.css" />
 <a href="/map/index" class="mainLogo">
-	<img
-		src="../img/logo_main.png"
-		alt="noMainLogoImg_header"
-		class="mainLogoImg"
-	/>
+	<img src="../img/logo_main.png" alt="noMainLogoImg_header" class="mainLogoImg" />
 	<div class="mainLogoLtr">MARRAD</div>
 </a>
