--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -26,22 +26,11 @@
 	background-color: rgba(255, 255, 255, 0);
 	border: 0;
 	border-radius: 10px;
-	margin: 0 0 3px 0px !important;
+	margin: 0 0 3px 0 !important;
 	padding: 10px 70px 10px 4px;
 	cursor: pointer;
 	text-align: center;
 	transition-duration: 0.3s;
-
-	animation-name: menuBarBtnShow;
-	animation-duration: 1s;
-}
-@keyframes menuBarBtnShow {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
 }
 
 .menuBarBtn:hover {
@@ -59,7 +48,7 @@
 	background-color: #f6f6f67e;
 	border: 0;
 	border-radius: 10px;
-	margin: 0 0 3px 0px;
+	margin: 0 0 3px 0;
 	padding: 10px 70px 10px 4px;
 	cursor: pointer;
 	text-align: center;
@@ -115,16 +104,6 @@
 	height: 40px;
 	border-radius: 10px;
 	transition-duration: 2s;
-	animation-name: visitorAnimation;
-	animation-duration: 1.5s;
-}
-@keyframes visitorAnimation {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
 }
 
 /* 지도 영역 및 지도 */
