--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="../CSS/index.css" />
-<link rel="stylesheet" href="../CSS/common.css" />
+<link rel="stylesheet" href="/CSS/index.css" />
+<link rel="stylesheet" href="/CSS/common.css" />
 <a href="/map/index" class="mainLogo">
 	<img
-		src="../img/logo_main.png"
+		src="/img/logo_main.png"
 		alt="noMainLogoImg_header"
 		class="mainLogoImg"
 	/>
