--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>MARRAD</title>
-		<link rel="stylesheet" href="../CSS/settings.css" />
-		<link rel="stylesheet" href="../CSS/common.css" />
-		<link rel="stylesheet" href="../CSS/index.css" />
-		<link rel="stylesheet" href="../CSS/marker.css" />
+		<link rel="stylesheet" href="/CSS/settings.css" />
+		<link rel="stylesheet" href="/CSS/common.css" />
+		<link rel="stylesheet" href="/CSS/index.css" />
+		<link rel="stylesheet" href="/CSS/marker.css" />
 	</head>
 
 	<body>
@@ -19,10 +19,10 @@
 			<div class="headerArea">
 				<div
 					class="logoArea"
-					onmouseover="mouseoverMenuBar(), showMenuBar(),showVisitor()"
+					onmouseover="mouseoverMenuBar(), showMenuBar(), showVisitor()"
 					onmouseout="mouseoutMenuBar(), hideMenuBar(), showVisitor()"
 				>
-					<head th:replace="common/header" />
+					<head th:replace="common/header"> </head>
 				</div>
 			</div>
 
@@ -34,12 +34,12 @@
 						id="menuBarArea"
 						class="menuBarArea"
 						onmouseover="
-						mouseoverMenuBar(), 
-						showMenuBar(), 
+						mouseoverMenuBar(),
+						showMenuBar(),
 						showVisitor()"
 						onmouseout="
-						mouseoutMenuBar(), 
-						hideMenuBar(), 
+						mouseoutMenuBar(),
+						hideMenuBar(),
 						showVisitor()"
 					>
 						<!-- 날씨 버튼 -->
@@ -47,13 +47,13 @@
 							id="weatherBtn"
 							class="selectedBtn"
 							onclick="
-							selectWeatherBtn(event), 
-							weatherAction(), 
+							selectWeatherBtn(),
+							weatherAction(),
 							radioClose(),
 							eqClose()"
 						>
 							<img
-								src="../img/icon_weather2.png"
+								src="/img/icon_weather2.png"
 								alt="noRadioBtnImg"
 								class="radioBtnImg"
 							/>
@@ -65,15 +65,15 @@
 						<!-- 방사능 버튼 -->
 						<div
 							id="radioBtn"
-							class="hiddenAni"
+							class="hidden"
 							onclick="
-							selectRadioBtn(event), 
-							radioAction(), 
-							weatherClose(), 
+							selectRadioBtn(),
+							radioAction(),
+							weatherClose(),
 							eqClose()"
 						>
 							<img
-								src="../img/icon_radioactivity_mono.png"
+								src="/img/icon_radioactivity_mono.png"
 								alt="noRadioBtnImg"
 								class="radioBtnImg"
 							/>
@@ -85,15 +85,15 @@
 						<!-- 지진 버튼 -->
 						<div
 							id="eqBtn"
-							class="hiddenAni"
+							class="hidden"
 							onclick="
-							selectEQBtn(event), 
+							selectEQBtn(),
 							eqAction(),
-							weatherClose(), 
+							weatherClose(),
 							radioClose()"
 						>
 							<img
-								src="../img/icon_earthquake.png"
+								src="/img/icon_earthquake.png"
 								alt="noRadioBtnImg"
 								class="radioBtnImg"
 							/>
@@ -117,7 +117,7 @@
 
 						<!-- 확장 아이콘 -->
 						<div id="iconExpandArea" class="iconExpandArea">
-							<img src="../img/icon_expand.png" alt="noIconExpand" />
+							<img src="/img/icon_expand.png" alt="noIconExpand" />
 						</div>
 
 						<!-- 방문자 수 -->
@@ -138,7 +138,7 @@
 						<div class="markerInfo">
 							<span>
 								<img
-									src="../img/marker_radioactivity_normal.png"
+									src="/img/marker_radioactivity_normal.png"
 									alt="noEqMarker"
 									class="markerInfoImg"
 								/>
@@ -148,7 +148,7 @@
 						<div class="markerInfo">
 							<span>
 								<img
-									src="../img/marker_radioactivity_yellow.png"
+									src="/img/marker_radioactivity_yellow.png"
 									alt="noEqMarker_yellow"
 									class="markerInfoImg"
 								/>
@@ -158,7 +158,7 @@
 						<div class="markerInfo">
 							<span>
 								<img
-									src="../img/marker_radioactivity_red.png"
+									src="/img/marker_radioactivity_red.png"
 									alt="noEqMarker_red"
 									class="markerInfoImg"
 								/>
@@ -172,7 +172,7 @@
 						<div class="markerInfo">
 							<span>
 								<img
-									src="../img/marker_earthquake.png"
+									src="/img/marker_earthquake.png"
 									alt="noEqMarker"
 									class="markerInfoImg"
 								/>
@@ -182,7 +182,7 @@
 						<div class="markerInfo">
 							<span>
 								<img
-									src="../img/marker_earthquake_yellow.png"
+									src="/img/marker_earthquake_yellow.png"
 									alt="noEqMarker_yellow"
 									class="markerInfoImg"
 								/>
@@ -192,7 +192,7 @@
 						<div class="markerInfo">
 							<span>
 								<img
-									src="../img/marker_earthquake_red.png"
+									src="/img/marker_earthquake_red.png"
 									alt="noEqMarker_red"
 									class="markerInfoImg"
 								/>
@@ -213,7 +213,7 @@
 	<!-- ajax script -->
 	<script
 		type="text/javascript"
-		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ff6d272e36cf8a9c0cc865875558ac29"
+		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1599ebd89f92e779af67726a3670fb94"
 	></script>
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
@@ -232,9 +232,9 @@
 		});
 	</script>
 
-	<script src="../JS/kakaoMap.js"></script>
-	<script src="../JS/weatherData.js"></script>
-	<script src="../JS/radioData.js"></script>
-	<script src="../JS/eqData.js"></script>
-	<script src="../JS/button.js"></script>
+	<script src="/JS/kakaoMap.js"></script>
+	<script src="/JS/weatherData.js"></script>
+	<script src="/JS/radioData.js"></script>
+	<script src="/JS/eqData.js"></script>
+	<script src="/JS/button.js"></script>
 </html>
