--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -32,6 +32,9 @@
 	text-align: center;
 	transition-duration: 0.3s;
 }
+/* .menuBarBtn-fade_in {
+	opacity: 0;
+} */
 
 .menuBarBtn:hover {
 	background-color: #f6f6f67e;
@@ -124,19 +127,21 @@
 /* 지진 마커 아이콘 설명 */
 .radioMarkerInfoArea,
 .eqMarkerInfoArea {
-	background-color: rgb(255, 255, 255);
+	position: absolute;
+	right: 0.7%;
 	display: flex;
 	flex-direction: row;
-	position: absolute;
 	justify-content: space-evenly;
+	align-items: center;
 	z-index: 3;
 	width: 400px;
 	height: 45px;
 	border: 0;
 	border-radius: 15px;
 	bottom: 1%;
-	right: 0.7%;
-	align-items: center;
+	background-color: rgb(255, 255, 255);
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+
 }
 
 .markerInfo {
