--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -74,18 +74,33 @@
 	height: 30px;
 }
 
+.eqYearArea {
+	width: 174px;
+	display: flex;
+	align-items: center;
+	background-color: rgba(255, 255, 255, 0);
+	border: 0;
+	border-radius: 10px;
+	margin: 0 0 3px 0 !important;
+	padding: 10px 10px 10px 0;
+	cursor: pointer;
+	text-align: center;
+	transition-duration: 0.3s;
+}
+
 .eqYearMenu {
-	width: 200px;
-	height: 30px;
+	width: 100%;
+	height: 50px;
 	padding: 5px 10px;
 	background-color: rgba(255, 255, 255, 0.461);
 	border: 0;
 	border-radius: 10px;
 	outline: none;
+	font-size: 1.2em;
 }
-.eqYearMenu:hover {
+/* .eqYearMenu:hover {
 	background-color: #bcbcbce1;
-}
+} */
 
 /* 메뉴바 확장 표시 아이콘 */
 .iconExpandArea {
@@ -141,7 +156,6 @@
 	bottom: 1%;
 	background-color: rgb(255, 255, 255);
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
-
 }
 
 .markerInfo {
