--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 	<head>
 		<meta charset="UTF-8" />
@@ -19,8 +19,8 @@
 			<div class="headerArea">
 				<div
 					class="logoArea"
-					onmouseover="mouseoverMenuBar(), showMenuBar(), showVisitor()"
-					onmouseout="mouseoutMenuBar(), hideMenuBar(), showVisitor()"
+					onmouseover="mouseoverMenuBar(), showMenuBar() "
+					onmouseout="mouseoutMenuBar(), hideMenuBar() "
 				>
 					<head th:replace="common/header"> </head>
 				</div>
@@ -35,12 +35,12 @@
 						class="menuBarArea"
 						onmouseover="
 						mouseoverMenuBar(),
-						showMenuBar(),
-						showVisitor()"
+						showMenuBar()
+						"
 						onmouseout="
 						mouseoutMenuBar(),
-						hideMenuBar(),
-						showVisitor()"
+						hideMenuBar()
+						"
 					>
 						<!-- 날씨 버튼 -->
 						<div
@@ -99,11 +99,16 @@
 							/>
 							<button class="menu">지진</button>
 						</div>
-						<!-- <div class="eqYearArea">
-							<select name="year" id="eqYearMenu" class="eqYearMenu">
-								<option value="2023">2023년</option>
-								<option value="2021">2022년</option>
-								<option value="2022">2021년</option>
+						<div id="eqYearArea" class="hidden">
+							<select
+								name="year"
+								id="eqYearMenu"
+								class="eqYearMenu"
+								onchange="changedYear()"
+							>
+								<option value="2023" selected>2023년</option>
+								<option value="2022">2022년</option>
+								<option value="2021">2021년</option>
 								<option value="2020">2020년</option>
 								<option value="2019">2019년</option>
 								<option value="2018">2018년</option>
@@ -113,23 +118,11 @@
 								<option value="2014">2014년</option>
 								<option value="2013">2013년</option>
 							</select>
-						</div> -->
+						</div>
 
 						<!-- 확장 아이콘 -->
 						<div id="iconExpandArea" class="iconExpandArea">
 							<img src="/img/icon_expand.png" alt="noIconExpand" />
-						</div>
-
-						<!-- 방문자 수 -->
-						<div id="visitCountArea" class="hidden">
-							<!-- 오늘 방문자 수 -->
-							<div class="todayVisit">
-								오늘 방문자: <span th:text="${post.dailyPost}"></span>명
-							</div>
-							<!-- 누적 방문자 수 -->
-							<div class="totalVisit">
-								누적 방문자: <span th:text="${post.post}"></span>명
-							</div>
 						</div>
 					</div>
 
